--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,18 @@
       <strong>We're sorry but umaaji-calculator doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <script src="https://www.gstatic.com/firebasejs/5.7.1/firebase.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyA0GnSR6ZxjiE648LfJjVCxTK1uQ29ML7E",
+        authDomain: "umaaji-calculator.firebaseapp.com",
+        databaseURL: "https://umaaji-calculator.firebaseio.com",
+        projectId: "umaaji-calculator",
+        storageBucket: "umaaji-calculator.appspot.com",
+        messagingSenderId: "251808324015"
+      };
+      firebase.initializeApp(config);
+    </script>
   </body>
 </html>
