--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title>umaaji-calculator</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap">
   </head>
   <body>
     <noscript>
